feat(rating): implement full two-way rating/review system with admin moderation, delayed visibility, 30-day auto-5-star, AI matching + notification system
- Add two-way rating/review system with delayed visibility
- Add admin moderation for scores below 4 stars + 30-day auto 5-star approval
- Integrate AI matching into rating/review flow
- Add notification system for AI matching invites with subscription limits
- Fix CRITICAL + HIGH + MEDIUM code review issues (security, business logic, indexes, cleanup)